--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.8.2",
     "react-tsparticles": "^2.9.3",
     "sass": "^1.58.3",
     "tsparticles": "^2.9.3"
